--- a/DronePerluetteAffichage/MainWindow.xaml
+++ b/DronePerluetteAffichage/MainWindow.xaml
@@ -11,7 +11,8 @@
         MinHeight="600"
         MinWidth="800"
         WindowStyle="None"
-        WindowStartupLocation="CenterScreen" AllowsTransparency="True">
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
